--- a/caca/index.html
+++ b/caca/index.html
@@ -116,7 +116,7 @@
 			</div>
 		
 		<h2 hidden id="parabens">Seja bem vindo ao Dedsec!!!</h2>
-		<div hidden id="btnVoltar"><img src="https://media4.giphy.com/media/l3q2BAs9N0IItUKA0/giphy.gif" alt=""></div>
+		<div hidden id="btnVoltar"><img src="http://pa1.narvii.com/6351/6748edf71583f7744bad9d698c6ed9fcf5cf8943_00.gif" alt=""></div>
 		<p id="encontradas"></p>
 		<table id="tabuleiro" align="center">
 			<tr>
